* Fri Dec 21 2018 Michael Morrone <michael.morrone@onyxpoint.com> - 0.1.0
- Initial commit.
- Install HIRS Provisioner and check-in with Attestation Certificate Authority.