@@ -17,7 +17,7 @@
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 4.25.1 < 5.0.0"
+      "version_requirement": ">= 4.25.1 < 6.0.0"
     }
   ],
   "operatingsystem_support": [
